Revision history for Perl extension Log::Dispatch::TestDiag.

{{$NEXT}}
    - Switch to Dist::Zilla for release management.

0.02    Tues Feb 26 13:44 PST 2013
    - allow "as_note=>1" to send output via "note()" instead of "diag()"

0.01    Tues Dec 20 00:32 PST 2011
    - initial release